[package]
name = "katanactl2"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-alloc = { version = "0.5.1" }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
heapless = { version = "0.8.0", features = ["defmt-03", "portable-atomic-critical-section"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.9.0"
rp2040-hal = { version = "0.10.2", features = ["critical-section-impl", "defmt"] }
static_cell = "2.1.0"

katana_sysex = { path = "../katana_sysex" }