[package]
name = "rp_fc"
version = "1.0.0"
edition = "2021"

[dependencies]
rp2040-hal = { version = "0.10.0", features = ["critical-section-impl", "defmt"], git = "https://github.com/rp-rs/rp-hal.git", rev = "23a68bce0b914eff13a0e750ba22b0d3f616e06a" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-alloc = { version = "0.6.0" }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
heapless = { version = "0.8.0", features = ["defmt-03", "portable-atomic-critical-section"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
static_cell = "2.1.0"

# Boards
rp-pico = { version = "0.9.0", optional = true }
vcc-gnd-yd-rp2040 = { version = "0.6.0", optional = true }

katana_sysex = { path = "../katana_sysex" }

[features]
default = [ "vcc-gnd-yd-rp2040" ]
